# duetable

./: .gitignore  README.md  pyproject.toml
MIDI Files/: Violin34-4Bars(1).mid  Violin34-8Bars(1).mid  Violoncello34-4Bars.mid
docs/examples/melody_modification/: demo.html
docs/examples/melody_modification/childhood/: cgl2l-part-100steps_05prob.mid  clg2l-part-100steps_075prob.mid  l2l-100steps_01prob.mid  l2l-100steps_025prob.mid  l2l-part-100steps_075prob.mid  lg2l-100steps_01prob.mid  lg2l-100steps_025prob.mid  (+2 more)
duetable/: README.md  pyproject.toml
duetable/MIDI Files/: SynthSolo1.mid  Violin34-4Bars.mid
duetable/max_msp_ui/: duetable_ui.maxpat  max_osc_ui.py
duetable/mupt/: processing.py  server.py
duetable/src/: abc_utils.py  act_1.py  act_2.py  act_3.py  act_3_1.py  audio_to_midi_aub.py  audio_to_midi_dummy.py  audio_to_midi_ess.py  audio_to_midi_spoti.py  duetable.py  interfaces.py  melody_markov_chain.py  midi_devices.py  midi_utils.py  mupt_connector.py  regenerators.py  sequence_player.py  settings.py  stream_audio_to_midi.py  stream_audio_to_midi_aub.py  transformers.py
duetable/tests/: transformers.py
mupt/: server.py
pythonProject/: music21Rules.py
src/acts/: act_1.py  act_2.py  act_3.py  act_3_1.py
src/duetable/: abc_utils.py  audio_to_midi_aub.py  audio_to_midi_dummy.py  audio_to_midi_ess.py  audio_to_midi_spoti.py  duetable.py  interfaces.py  regenerators.py  sequence_player.py  settings.py  transformations.py
src/max_msp_ui/: max_osc_ui.py
src/mupt/: mupt.ipynb  server.py
tests/duetable/: regenerators.py  transformations.py
(+23 files in other folders)
