[tool.poetry]
name = "duetable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "duetable", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
#aubio = "^0.4.9"
mido = "^1.3.2"
numpy = "1.26.4"
pyaudio = "^0.2.14"
miditoolkit = "^1.0.1"
python-rtmidi = "^1.5.8"
music21 = "^9.1.0"
python-osc = "^1.8.3"
torch = "^2.4.0"
torchaudio = "^2.4.0"
transformers = "^4.44.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
fastapi = "^0.112.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
